100p implementation of videosdb